--- a/Core/Core/Features/Quizzes/QuizDetails/Student/StudentQuizDetailsViewController.storyboard
+++ b/Core/Core/Features/Quizzes/QuizDetails/Student/StudentQuizDetailsViewController.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -349,12 +348,12 @@
                             <constraint firstItem="YZl-wz-0Ts" firstAttribute="trailing" secondItem="mCo-gK-72i" secondAttribute="trailing" id="46K-8b-7AL"/>
                             <constraint firstItem="mCo-gK-72i" firstAttribute="top" secondItem="YZl-wz-0Ts" secondAttribute="top" id="95s-Gs-rGb"/>
                             <constraint firstItem="T2q-9N-t3R" firstAttribute="centerX" secondItem="bBt-le-azR" secondAttribute="centerX" id="GVx-a1-uUe"/>
-                            <constraint firstItem="nLr-FI-z7N" firstAttribute="leading" secondItem="YZl-wz-0Ts" secondAttribute="leading" id="LQz-cM-KcW"/>
+                            <constraint firstItem="nLr-FI-z7N" firstAttribute="leading" secondItem="YZl-wz-0Ts" secondAttribute="leading" placeholder="YES" id="LQz-cM-KcW"/>
                             <constraint firstItem="mCo-gK-72i" firstAttribute="leading" secondItem="YZl-wz-0Ts" secondAttribute="leading" id="NsD-hY-Bee"/>
                             <constraint firstItem="T2q-9N-t3R" firstAttribute="centerY" secondItem="bBt-le-azR" secondAttribute="centerY" id="Q0t-TT-sYe"/>
-                            <constraint firstItem="YZl-wz-0Ts" firstAttribute="bottom" secondItem="nLr-FI-z7N" secondAttribute="bottom" id="Q83-MF-PFW"/>
+                            <constraint firstItem="YZl-wz-0Ts" firstAttribute="bottom" secondItem="nLr-FI-z7N" secondAttribute="bottom" placeholder="YES" id="Q83-MF-PFW"/>
                             <constraint firstItem="nLr-FI-z7N" firstAttribute="top" secondItem="mCo-gK-72i" secondAttribute="bottom" id="gV0-zQ-kU5"/>
-                            <constraint firstItem="nLr-FI-z7N" firstAttribute="trailing" secondItem="YZl-wz-0Ts" secondAttribute="trailing" id="sTF-R7-TXF"/>
+                            <constraint firstItem="nLr-FI-z7N" firstAttribute="trailing" secondItem="YZl-wz-0Ts" secondAttribute="trailing" placeholder="YES" id="sTF-R7-TXF"/>
                         </constraints>
                     </view>
                     <connections>
@@ -383,50 +382,6 @@
             <point key="canvasLocation" x="22" y="112"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="1qG-1P-yhY">
-            <size key="intrinsicContentSize" width="82" height="20.5"/>
-        </designable>
-        <designable name="9QA-cP-14V">
-            <size key="intrinsicContentSize" width="28.5" height="20.5"/>
-        </designable>
-        <designable name="DeH-vC-qRB">
-            <size key="intrinsicContentSize" width="41" height="20.5"/>
-        </designable>
-        <designable name="GD1-Qf-OW2">
-            <size key="intrinsicContentSize" width="92.5" height="19.5"/>
-        </designable>
-        <designable name="LgB-7v-teN">
-            <size key="intrinsicContentSize" width="83.5" height="20.5"/>
-        </designable>
-        <designable name="Ns2-qE-sWB">
-            <size key="intrinsicContentSize" width="72.5" height="20.5"/>
-        </designable>
-        <designable name="Nyl-KK-hvW">
-            <size key="intrinsicContentSize" width="63.5" height="19.5"/>
-        </designable>
-        <designable name="OU5-yT-XTO">
-            <size key="intrinsicContentSize" width="138.5" height="20.5"/>
-        </designable>
-        <designable name="aU3-YC-HBN">
-            <size key="intrinsicContentSize" width="102.5" height="24"/>
-        </designable>
-        <designable name="kmB-Zp-EWl">
-            <size key="intrinsicContentSize" width="88.5" height="19.5"/>
-        </designable>
-        <designable name="lH3-jJ-2VR">
-            <size key="intrinsicContentSize" width="30.5" height="19.5"/>
-        </designable>
-        <designable name="nLr-FI-z7N">
-            <size key="intrinsicContentSize" width="74" height="32"/>
-        </designable>
-        <designable name="q9K-w2-Lzw">
-            <size key="intrinsicContentSize" width="105.5" height="19.5"/>
-        </designable>
-        <designable name="t5D-Ru-JIv">
-            <size key="intrinsicContentSize" width="55.5" height="19.5"/>
-        </designable>
-    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
