--- a/Parent/Parent/Assignments/View/ParentAssignmentDetailsViewController.storyboard
+++ b/Parent/Parent/Assignments/View/ParentAssignmentDetailsViewController.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -62,7 +61,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wq8-fc-Gqd">
                                         <rect key="frame" x="16" y="80.5" width="382" height="570"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7y-ay-BMN" userLabel="Submission &amp; Rubric Section">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7y-ay-BMN" userLabel="Submission &amp; Feedback Section">
                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="87"/>
                                                 <subviews>
                                                     <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ez7-0Q-O4q" customClass="DividerView" customModule="Parent" customModuleProvider="target">
@@ -74,7 +73,7 @@
                                                             <userDefinedRuntimeAttribute type="string" keyPath="tintColorName" value="borderMedium"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3FV-47-gf4">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3FV-47-gf4" userLabel="Submission And Feedback Button">
                                                         <rect key="frame" x="0.0" y="16" width="382" height="55"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="55" id="voE-N9-09N"/>
@@ -82,7 +81,7 @@
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                                         <connections>
-                                                            <action selector="submissionAndRubricButtonPressed:" destination="Rwe-K5-TpS" eventType="primaryActionTriggered" id="YfD-fb-JJm"/>
+                                                            <action selector="submissionAndFeedbackButtonPressed:" destination="Rwe-K5-TpS" eventType="primaryActionTriggered" id="YfD-fb-JJm"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -165,7 +164,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Set a date and time to be notified of this event." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fUD-45-zSj" customClass="DynamicLabel" customModule="Parent" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="44.5" width="317" height="38.5"/>
+                                                        <rect key="frame" x="0.0" y="44.5" width="346.5" height="19.5"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                         <color key="textColor" red="0.1764705882" green="0.23137254900000001" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -174,17 +173,17 @@
                                                             <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDarkest"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
-                                                    <view opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PmW-sY-tBw" customClass="CoreSwitch" customModule="Core">
-                                                        <rect key="frame" x="333" y="44.5" width="51" height="31"/>
+                                                    <view opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PmW-sY-tBw" customClass="CoreSwitch" customModule="Core">
+                                                        <rect key="frame" x="362.5" y="44.5" width="19.5" height="31"/>
                                                         <connections>
                                                             <action selector="reminderSwitchChanged" destination="Rwe-K5-TpS" eventType="valueChanged" id="Rvu-R8-vTU"/>
                                                         </connections>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XQ0-mP-dJn">
-                                                        <rect key="frame" x="0.0" y="91" width="382" height="246"/>
+                                                        <rect key="frame" x="0.0" y="72" width="382" height="265"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCl-Yv-VMQ">
-                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="246"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="265"/>
                                                                 <connections>
                                                                     <action selector="reminderDateButtonPressed:" destination="Rwe-K5-TpS" eventType="touchUpInside" id="ezL-gR-9Ko"/>
                                                                 </connections>
@@ -277,7 +276,7 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="51c-fZ-UPh"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OXk-Fh-SaA" customClass="FloatingButton" customModule="Parent" customModuleProvider="target">
-                                <rect key="frame" x="342" y="790" width="56" height="56"/>
+                                <rect key="frame" x="342" y="756" width="56" height="56"/>
                                 <accessibility key="accessibilityConfiguration" identifier="AssignmentDetails.replyButton"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="JPa-R3-zhU"/>
@@ -318,7 +317,7 @@
                         <outlet property="scrollView" destination="pGe-DC-4hY" id="R95-rr-uN0"/>
                         <outlet property="statusIconView" destination="YLJ-ji-ykM" id="qQq-kP-AsP"/>
                         <outlet property="statusLabel" destination="dS1-sF-FYM" id="zfW-FF-ph2"/>
-                        <outlet property="submissionAndRubricButton" destination="3FV-47-gf4" id="Oa9-39-Ren"/>
+                        <outlet property="submissionAndFeedbackButton" destination="3FV-47-gf4" id="Oa9-39-Ren"/>
                         <outlet property="titleLabel" destination="sJI-GY-ehK" id="9vZ-Zp-EPE"/>
                         <outlet property="webViewContainer" destination="Ofb-9i-Eu9" id="5xT-2S-7EM"/>
                     </connections>
@@ -328,35 +327,6 @@
             <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="4kO-uw-nlY">
-            <size key="intrinsicContentSize" width="175.5" height="19.5"/>
-        </designable>
-        <designable name="8Uy-xP-m2W">
-            <size key="intrinsicContentSize" width="87.5" height="19.5"/>
-        </designable>
-        <designable name="Ipp-DH-Krm">
-            <size key="intrinsicContentSize" width="56.5" height="20.5"/>
-        </designable>
-        <designable name="OXk-Fh-SaA">
-            <size key="intrinsicContentSize" width="30" height="34"/>
-        </designable>
-        <designable name="Wfm-J9-tH3">
-            <size key="intrinsicContentSize" width="84.5" height="19.5"/>
-        </designable>
-        <designable name="dS1-sF-FYM">
-            <size key="intrinsicContentSize" width="111" height="20.5"/>
-        </designable>
-        <designable name="eMa-Rk-OHU">
-            <size key="intrinsicContentSize" width="30.5" height="19.5"/>
-        </designable>
-        <designable name="fUD-45-zSj">
-            <size key="intrinsicContentSize" width="346.5" height="19.5"/>
-        </designable>
-        <designable name="sJI-GY-ehK">
-            <size key="intrinsicContentSize" width="99" height="24"/>
-        </designable>
-    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
